subscribing-option added

--- a/index.html
+++ b/index.html
@@ -75,6 +75,30 @@
                 <img src="images/pngwing 10.png" alt="">
             </div>
         </section>
+        <!-- instagram section -->
+        <section class="instgram">
+                <h3 class="section-title">instagram</h3>\
+                <p class="section-description">
+                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                </p>
+
+                <div class="instagram-images">
+                  <div><img src="images/Rectangle 4.png" alt=""></div>
+                  <div><img src="images/Rectangle 5.png" alt=""></div>
+                  <div><img src="images/Rectangle 6.png" alt=""></div>
+                  <div><img src="images/Flower 01.png" alt=""></div>
+                    
+                </div>
+        </section>
+
+        <section class="subscribe">
+            <h3 class="subscibe-title">Get The Latest Deals</h3>
+            <p class="subscribe-description">$30 coupon for first shopping</p>
+            <div>
+                <input type="email" placeholder="Enter your email here....">
+                <button class="btn-primary">Subscribe</button>
+            </div>
+        </section>
     </main>
 
     <footer>
