added user review section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,900;1,700&family=Open+Sans:ital,wght@0,400;0,700;1,700&display=swap"
         rel="stylesheet">
+    <!-- font awesome link  -->
+    <script src="https://kit.fontawesome.com/9020de8334.js" crossorigin="anonymous"></script>
     <!-- css link  -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -32,6 +34,7 @@
     </header>
 
     <main>
+        <!-- feature flower section   -->
         <section class="featured-folower">
             <h2 class="section-title">
                 Our Featured Flowers
@@ -72,7 +75,7 @@
                 <button" class="btn-primary">Sign Up</button>
             </div>
             <div class="discount-flower">
-                <img src="images/pngwing 10.png" alt="">
+                <img src="images/Flower-Transparent-Isolated-PNG.png" alt="">
             </div>
         </section>
         <!-- instagram section -->
@@ -90,7 +93,61 @@
                     
                 </div>
         </section>
-
+        <!-- ueser review  -->
+        <section class="user-review">
+            <h3 class="section-title">Our 5 Star Review</h3>
+            <div class="review-container">
+                <div class="review">
+                    <div class="five-star">
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <h4>Beautiful arrangement</h4>
+                    <p>Beautiful arrangement, exactly as described. On time. Highly recommend.</p>
+                    <p>20 hours ago</p>
+                </div>
+                <div class="review">
+                    <div class="five-star">
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <h4>Beautiful arrangement</h4>
+                    <p>Beautiful arrangement, exactly as described. On time. Highly recommend.</p>
+                    <p>03 hours ago</p>
+                </div>
+                <div class="review">
+                    <div class="five-star">
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <h4>Beautiful arrangement</h4>
+                    <p>Beautiful arrangement, exactly as described. On time. Highly recommend.</p>
+                    <p>23 hours ago</p>
+                </div>
+                <div class="review">
+                    <div class="five-star">
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                        <div class="star"><i class="fa-solid fa-star"></i></div>
+                    </div>
+                    <h4>Beautiful arrangement</h4>
+                    <p>Beautiful arrangement, exactly as described. On time. Highly recommend.</p>
+                    <p>10 hours ago</p>
+                </div>
+            </div>
+        </section>
+        <!-- subscribe section  -->
         <section class="subscribe">
             <h3 class="subscibe-title">Get The Latest Deals</h3>
             <p class="subscribe-description">$30 coupon for first shopping</p>
