--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                     <h4>Beautiful arrangement</h4>
                     <p>Beautiful arrangement, exactly as described. On time. Highly recommend.</p>
-                    <p>20 hours ago</p>
+                    <p class="review-time">20 hours ago</p>
                 </div>
                 <div class="review">
                     <div class="five-star">
@@ -119,7 +119,7 @@
                     </div>
                     <h4>Beautiful arrangement</h4>
                     <p>Beautiful arrangement, exactly as described. On time. Highly recommend.</p>
-                    <p>03 hours ago</p>
+                    <p class="review-time">03 hours ago</p>
                 </div>
                 <div class="review">
                     <div class="five-star">
@@ -131,7 +131,7 @@
                     </div>
                     <h4>Beautiful arrangement</h4>
                     <p>Beautiful arrangement, exactly as described. On time. Highly recommend.</p>
-                    <p>23 hours ago</p>
+                    <p class="review-time">23 hours ago</p>
                 </div>
                 <div class="review">
                     <div class="five-star">
@@ -143,7 +143,7 @@
                     </div>
                     <h4>Beautiful arrangement</h4>
                     <p>Beautiful arrangement, exactly as described. On time. Highly recommend.</p>
-                    <p>10 hours ago</p>
+                    <p class="review-time">10 hours ago</p>
                 </div>
             </div>
         </section>
