--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
                 </div>
             </div>
         </section>
-
         <!-- discount section  -->
         <section class="discount">
             <div class="discount-info">
@@ -157,7 +156,7 @@
             </div>
         </section>
     </main>
-
+<!-- footer section  -->
     <footer>
             <h2 class="footer-title"><span class="color-primary">Flower</span>Shop</h2>
             <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
